--- a/index.html
+++ b/index.html
@@ -47,5 +47,6 @@
         <span>this is a span</span>
         <p>hello world</p>
         <p>this is a span</p>
+        <a href="test.html">go to the new page</a>
     </body>
 </html>
